--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://tushar2411.github.io/networking/404.html" />
 <meta property="og:site_name" content="Computer Networking And Cybersecurity" />
 <script type="application/ld+json">
-{"url":"https://tushar2411.github.io/networking/404.html","@type":"WebPage","headline":"Computer Networking And Cybersecurity","description":"your daily dose of networks and cybersecurity articles, tutorials","@context":"https://schema.org"}</script>
+{"description":"your daily dose of networks and cybersecurity articles, tutorials","url":"https://tushar2411.github.io/networking/404.html","@type":"WebPage","headline":"Computer Networking And Cybersecurity","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/networking/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://tushar2411.github.io/networking/feed.xml" title="Computer Networking And Cybersecurity" /><link rel="shortcut icon" type="image/x-icon" href="/networking/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
