--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h1 id="posts">Posts</h1>
+        <div class="home"><p><img src="https://raw.githubusercontent.com/tushar2411/networking/master/images/wallpaperflare.com_wallpaper(2).jpg" alt="img" /></p>
+<h1 id="tips">Tips</h1>
+<h1 id="posts">Posts</h1>
 
 
 
