--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="https://raw.githubusercontent.com/tushar2411/networking/master/images/wallpaperflare.com_wallpaper(2).jpg" alt="img" /></p>
+        <div class="home"><p><img src="https://raw.githubusercontent.com/tushar2411/networking/master/images/127logo.jpg" alt="img" /></p>
 <h1 id="tips">Tips</h1>
 <h1 id="posts">Posts</h1>
 
